github icon: fix github icon not displaying properly in dark mode

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -301,6 +301,10 @@ a.socialicon {
    GITHUB MICROANIMATION
 --------------------------
 */
+html[light-mode="dark"] .github-icon{
+  fill: #ffff;
+}
+
 .github-icon {
   width: 40px;
   margin-left: 12px;
